feat: Adc. opção de gráfico de linha logarítmico

--- a/src/templates/generation.jinja
+++ b/src/templates/generation.jinja
@@ -176,7 +176,8 @@
                         name="graph-type",
                         selected=graph_type,
                         options=[
-                        ["line", "Linha"],
+                        ["linear", "Linha (Linear)"],
+                        ["log", "Linha (Logarítmico)"],
                         ["bar", "Barra"],
                         ["stacked", "Barra Empilhada"],
                         ]) }}
