--- a/src/templates/__base__.jinja
+++ b/src/templates/__base__.jinja
@@ -44,6 +44,10 @@
       .accordion-button::after {
         background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23FFFFFF'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z' /></svg>") !important;
       }
+    .tooltip-wide .tooltip-inner {
+        max-width: 350px;
+        white-space: pre-line;
+    }
     </style>
   </head>
   <body class="text-bg-dark">
@@ -54,7 +58,7 @@
         {% block navbarNav required %}
         {% endblock navbarNav %}
         <form id="navbar-form" class="d-flex">
-          {{ submit('Limpar Sessão', 'clear-session', 'btn-outline-danger') }}
+          {{ submit('Limpar Sessão', 'clear-session', 'btn-outline-danger', tooltip="Limpa todos os dados da sessão (Ex: diretório base, arquivos de configuração, etc.)", tooltip_class="tooltip-wide") }}
         </form>
       </div>
     </nav>
